tests/baselines/reference/parserSkippedTokens9.errors.txt
parserSkippedTokens9.ts(2,9): error TS1127: Invalid character.


==== parserSkippedTokens9.ts (1 errors) ====
    ; // existing trivia
    /*foo*/ \ /*bar*/
            
!!! error TS1127: Invalid character.